Adding working dsw, cmake update, tests improvements

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -2,8 +2,9 @@ project(sdizo_project1 CXX)
 cmake_minimum_required(VERSION 3.12)
 set(CMAKE_CXX_STANDARD 17)
 set(CMAKE_CXX_FLAGS "-Wall -Wextra -ggdb -fsanitize=address")
-set(OUTPUT_NAME sdizo)
+project(sdizo CXX)
 
 file(GLOB_RECURSE CXX_SOURCE src/*.cc)
+add_executable(${PROJECT_NAME} ${CXX_SOURCE})
+target_link_libraries(${PROJECT_NAME} stdc++fs)
 
-add_executable(${OUTPUT_NAME} ${CXX_SOURCE})
