--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -1,10 +1,12 @@
 project(sdizo_project1 CXX)
 cmake_minimum_required(VERSION 3.12)
 set(CMAKE_CXX_STANDARD 17)
-set(CMAKE_CXX_FLAGS "-Wall -Wextra -ggdb -fsanitize=address")
 project(sdizo CXX)
 
+add_compile_definitions(_CRT_SECURE_NO_WARNINGS)
+find_package(cppfs CONFIG REQUIRED)
+find_package(fmt CONFIG REQUIRED)
 file(GLOB_RECURSE CXX_SOURCE src/*.cc)
 add_executable(${PROJECT_NAME} ${CXX_SOURCE})
-target_link_libraries(${PROJECT_NAME} stdc++fs)
+target_link_libraries(${PROJECT_NAME} cppfs::cppfs fmt::fmt fmt::fmt-header-only)
 
