--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -1,7 +1,8 @@
 project(sdizo_project1 CXX)
 cmake_minimum_required(VERSION 3.12)
 set(CMAKE_CXX_STANDARD 17)
-set(CMAKE_CXX_FLAGS "-Wall -Wextra -ggdb -fsanitize=address")
+set(CMAKE_CXX_FLAGS_DEBUG "-g -ggdb ")
+set(CMAKE_CXX_FLAGS "-Wall -Wextra")
 project(sdizo CXX)
 
 file(GLOB_RECURSE CXX_SOURCE src/*.cc)
